deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-ctx
spec:
  selector:
    app.kubernetes.io/name: git-ctx
  ports:
    - name: http
      port: 80
      targetPort: http
